View Issue Details

IDProjectCategoryView StatusLast Update
0024958CommunityOCCT:Shape Healingpublic2014-11-11 12:53
Reporterdrazmyslovich Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.6.0 
Target Version6.8.0Fixed in Version6.8.0 
Summary0024958: Numerous ShapeFix_IntersectionTool code fixes
DescriptionThis ticket is a common ticket for the following issues in ShapeFix_IntersectionTool:
1. SplitEdge makes nothing for the degenerated edges with SameParameter flag, because degenerated has no 3d curve. Therefore the degenerated edge should be always processed as an edge without SameParameter flag.
2. CutEdge always returns true even if no cuts were done.
3. UnionVertexes always returns true even if nothing is done.
4. FixSelfIntersectingWire doesn't take into account the return values of sub-functions, what results in wrong return flags and wrong further processing.
TagsNo tags attached.
Test case numberNot needed

Attached Files

  • 24958_2.png (79,490 bytes)

Activities

drazmyslovich

2014-05-26 14:23

developer   ~0029514

Please, review the patch

gka

2014-05-26 18:10

developer   ~0029521

Branch CR24958 is ready to be tested.

apn

2014-05-26 18:38

administrator   ~0029523

Branch CR24958_1 was created (contains only 24958 commit).

apn

2014-05-27 16:47

administrator   ~0029552

Dear BugMaster,

Branch CR24958_1 (and products from GIT master) was compiled on Linux, Windows platforms and tested.
SHA-1: b90bf63b520517fd0def534226b3f43037c30432

Number of compiler warnings:

occt component :
Linux: 17 (17 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 2 (2 on master)

Regressions/Differences:
de iges_1 L7 L8 M1 P5 R8
de iges_2 A9 B6 F4 G1
de iges_3 B2
de step_2 F4
de step_3 E6
de step_5 A1
http://occt-tests/CR24958-1-master-occt/Debian60-64/summary.html
http://occt-tests/CR24958-1-master-occt/Windows-32-VC9/summary.html

sat doc_2 F9 - in PRODUCTS

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 356228100 / 356360844
Total CPU difference: 52629.43999999985 / 50334.88000000012

Testing on Windows:
Total MEMORY difference: 375761556 / 380552036
Total CPU difference: 41415.796875 / 36707.09375

There are no differences in images found by testdiff.

drazmyslovich

2014-05-27 17:37

developer   ~0029554

Can somebody please provide me with summary.html files at least. The models, I think, aren't available.

abv

2014-05-27 17:55

manager   ~0029555

Dmitry, the differences reported are in number of entities resulting from import from IGES and STEP, thus having data files is necessary for analysis. We will have a look at this.

abv

2014-05-27 17:56

manager   ~0029556

Irina, please have a look at the reported differences.

ika

2014-06-18 14:41

developer   ~0029815

Differences were analyzed and all of them are not regressions.
The only problem was with step_3 E6(killed by CPU limit). But the cause in periodic normalization of BSpline surface, not in current fix.

Periodic normalization was optimized and pushed into branch CR24958_2.
Dear GKA,
Please review.

gka

2014-06-18 14:46

developer   ~0029816

Branch CR24958_2 is ready to be tested.

apv

2014-06-19 13:03

tester   ~0029828

Dear BugMaster,

Branch CR24958_2 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 056ae209bd1a01d9b8c222bf99bf1668d7193089

Number of compiler warnings:

occt component:
Linux: 16 (16 on master)
Windows: 0 (0 on master)
MacOS: 200 (200 on master)

products component :
Linux: 11 (11 on master)
Windows: 2 (2 on master)

Regressions/Differences:
Additional regression to previously reported: sat - doc_3 (003) - B3

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 345033996 / 344928120
Total CPU difference: 50688.97999999992 / 49969.979999999865

Testing on Windows:
Total MEMORY difference: 374100332 / 374590944
Total CPU difference: 38549.171875 / 38047.34375

ika

2014-06-26 11:27

developer   ~0029887

The problem was in cutting edge into parts one of which is too small (< Precision::Confusion())

Branch CR24958_2 is ready to be reviewed.
Dear GKA,
Please review.

gka

2014-06-26 13:16

developer   ~0029890

Branch CR24958_2 is ready to be tested.

mkv

2014-06-27 17:09

tester   ~0029911

Dear BugMaster,

Branch CR24958_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 2a5a5daf2d4828ba971bfd68b0b375eccfffb21d

Number of compiler warnings:

occt component :
Linux: 16 (16 on master)
Windows: 0 (0 on master)
MacOS: 200 (203 on master)

products component :
Linux: 11 (11 on master)
Windows: 2 (2 on master)

Regressions/Differences:
http://occt-tests/CR24958-2-master-occt/Debian60-64/summary.html
http://occt-tests/CR24958-2-master-occt/Windows-32-VC9/summary.html
de iges_1(001) L7, L8, P5, R8
de iges_2(002) A9, B6, G1
de iges_3(003) B2
de step_2(005) F4
de step_3(006) E6
de step_5(008) A1

http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24958_2/job/mnt-CR24958_2-master_products_tests_linux_sat_start/label=kazbex,tests_group=sat,tests_subgroup=006/3/HTML_Report/
http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24958_2/job/mnt-CR24958_2-master_products_tests_windows_sat_start/label=sixtex,tests_group=sat,tests_subgroup=006/2/HTML_Report/
sat doc_6(006) F9

http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24958_2/job/mnt-CR24958_2-master_products_tests_linux_sat_start/3/label=kazbex,tests_group=sat,tests_subgroup=009/HTML_Report/
sat read_parallel(009) A2
http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24958_2/job/mnt-CR24958_2-master_products_tests_linux_sat_start/3/label=kazbex,tests_group=sat,tests_subgroup=009/HTML_Report/
sat read_parallel(009) A3

http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24958_2/job/mnt-CR24958_2-master_products_tests_windows_sat_start/label=sixtex,tests_group=sat,tests_subgroup=005/2/HTML_Report/
sat doc_5(005) H6 - Improvement

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 345748032 / 345940280
Total CPU difference: 51307.920000000195 / 50407.420000000006

Testing on Windows:
Total MEMORY difference: 374042036 / 374639012
Total CPU difference: 37061.09375 / 36470.625

There are no differences in images found by testdiff.

ika

2014-07-01 19:02

developer  

24958_2.png (79,490 bytes)

ika

2014-07-01 19:04

developer   ~0029939

Dear MKV,

OCCT tests are not regressions, but right behavior after initial fix.
sat doc_6 F9:
also not a regression (difference in number of warnings during reading is right result of last fix)
sat read_parallel A2, A3:
I can't reproduce them. Branch CR24958_2 was tested on squeezex2 and results were OK (see attached screen of draw 24958_2.png)
sat doc_5 H6 (impovement) isn't reproduced too.

Could you please check are regressions sat read_parallel A2, A3 result of this fix?

mkv

2014-07-02 12:14

tester   ~0029942

Dear BugMaster,

following test cases are corrected and pushed to branch CR24958_2 of occt git-repository
de iges_1(001) L7, L8, P5, R8
de iges_2(002) A9, B6, G1
de iges_3(003) B2
de step_2(005) F4
de step_3(006) E6
de step_5(008) A1

following test case was corrected and pushed to new branch CR24958_2 of products git-repository
sat doc_6(006) F9

following test cases are non stable test cases
sat doc_5(005) H6
sat read_parallel(009) A2, A3

git

2014-07-22 16:20

administrator   ~0030346

Branch CR24958 has been deleted by inv.

SHA-1: 9f793e02b5e722b5edd1fc79d8970fdcd613eb78

git

2014-07-22 16:20

administrator   ~0030347

Branch CR24958_1 has been deleted by inv.

SHA-1: b90bf63b520517fd0def534226b3f43037c30432

git

2014-07-22 16:20

administrator   ~0030348

Branch CR24958_2 has been deleted by inv.

SHA-1: 25305b8c4f3aeab7183e5bc145d4ee98fb69759d

Related Changesets

occt: master 9cbe6290

2014-07-03 13:13:17

razmyslovich


Committer: apn Details Diff
0024958: Numerous ShapeFix_IntersectionTool code fixes

Optimize periodic normalization.
not needed split edge, if one of parts is too small
Small corrections of test cases for issue CR24958_2
Affected Issues
0024958
mod - src/Geom/Geom_BSplineSurface.cxx Diff File
mod - src/ShapeFix/ShapeFix_IntersectionTool.cxx Diff File
mod - tests/de/iges_1/P5 Diff File

Issue History

Date Modified Username Field Change
2014-05-26 14:19 drazmyslovich New Issue
2014-05-26 14:19 drazmyslovich Assigned To => drazmyslovich
2014-05-26 14:23 drazmyslovich Note Added: 0029514
2014-05-26 14:23 drazmyslovich Status new => resolved
2014-05-26 14:46 gka Assigned To drazmyslovich => gka
2014-05-26 18:10 gka Note Added: 0029521
2014-05-26 18:10 gka Status resolved => reviewed
2014-05-26 18:15 apn Assigned To gka => apn
2014-05-26 18:38 apn Note Added: 0029523
2014-05-27 16:47 apn Note Added: 0029552
2014-05-27 16:48 apn Test case number => Not needed
2014-05-27 16:48 apn Assigned To apn => drazmyslovich
2014-05-27 16:48 apn Status reviewed => assigned
2014-05-27 16:48 apn Target Version Unscheduled => 6.8.0
2014-05-27 17:37 drazmyslovich Note Added: 0029554
2014-05-27 17:55 abv Note Added: 0029555
2014-05-27 17:55 abv Assigned To drazmyslovich => ika
2014-05-27 17:56 abv Note Added: 0029556
2014-06-17 12:47 aiv Project Open CASCADE => Community
2014-06-18 14:41 ika Note Added: 0029815
2014-06-18 14:41 ika Assigned To ika => gka
2014-06-18 14:41 ika Status assigned => resolved
2014-06-18 14:46 gka Note Added: 0029816
2014-06-18 14:46 gka Status resolved => reviewed
2014-06-18 16:11 mkv Assigned To gka => mkv
2014-06-18 18:21 mkv Assigned To mkv => apv
2014-06-19 13:03 apv Note Added: 0029828
2014-06-19 13:03 apv Assigned To apv => ika
2014-06-19 13:03 apv Status reviewed => assigned
2014-06-26 11:27 ika Note Added: 0029887
2014-06-26 11:27 ika Assigned To ika => gka
2014-06-26 11:27 ika Status assigned => resolved
2014-06-26 13:16 gka Note Added: 0029890
2014-06-26 13:16 gka Status resolved => reviewed
2014-06-26 14:02 mkv Assigned To gka => mkv
2014-06-27 17:09 mkv Note Added: 0029911
2014-06-27 17:10 mkv Assigned To mkv => ika
2014-06-27 17:10 mkv Status reviewed => assigned
2014-07-01 19:02 ika File Added: 24958_2.png
2014-07-01 19:04 ika Note Added: 0029939
2014-07-01 19:04 ika Assigned To ika => mkv
2014-07-01 19:04 ika Status assigned => feedback
2014-07-02 12:14 mkv Note Added: 0029942
2014-07-02 12:16 mkv Assigned To mkv => bugmaster
2014-07-02 12:16 mkv Status feedback => tested
2014-07-04 13:38 apn Changeset attached => occt master 9cbe6290
2014-07-04 13:38 apn Assigned To bugmaster => apn
2014-07-04 13:38 apn Status tested => verified
2014-07-04 13:38 apn Resolution open => fixed
2014-07-22 16:20 git Note Added: 0030346
2014-07-22 16:20 git Note Added: 0030347
2014-07-22 16:20 git Note Added: 0030348
2014-11-11 12:46 aiv Fixed in Version => 6.8.0
2014-11-11 12:53 aiv Status verified => closed